// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mirror (a) analytic UV fold over a generator > folds Mirror.uvRemap into the generator sample coordinate (inline, no RTT) > final-pass-uvremap 1`] = `
"fn edgeClampUV(uv: vec2f) -> vec2f {
  return clamp(uv, vec2f(), vec2f(1));
}

fn mirrorReflect(center: vec2f, angle: f32, uv: vec2f, aspect: f32) -> vec3f {
  let aspectCorrectedUV = vec2f((uv.x * aspect), uv.y);
  let centerPos = vec2f((center.x * aspect), (1f - center.y));
  let delta = (aspectCorrectedUV - centerPos);
  let angleRad = (angle * 0.017453292519943295f);
  let lineDirection = vec2f(cos(angleRad), sin(angleRad));
  let lineNormal = vec2f((lineDirection.y * -1f), lineDirection.x);
  let signedDistance = dot(delta, lineNormal);
  let reflectedDelta = (delta - (lineNormal * (signedDistance * 2f)));
  let mirroredUV = (centerPos + reflectedDelta);
  let finalMirroredUV = vec2f((mirroredUV.x / aspect), mirroredUV.y);
  let shouldMirror = step(0f, signedDistance);
  return vec3f(finalMirroredUV.x, finalMirroredUV.y, shouldMirror);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  center: vec2f,
  angle: f32,
  edges: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_mr: padded_1,
  n_gen: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn genBody(seed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, seed, 1f);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  let foldUV_0 = edgeClampUV(mix(uv, (mirrorReflect(uniforms.n_mr.center, uniforms.n_mr.angle, uv, uniforms._sys.aspect)).xy, (mirrorReflect(uniforms.n_mr.center, uniforms.n_mr.angle, uv, uniforms._sys.aspect)).z));
  var composed_1 = genBody(uniforms.n_gen.seed, foldUV_0);
  return vec4f(linearToSrgb(tone_linear(composed_1.rgb)), composed_1.a);
}"
`;

exports[`Mirror (b) RTT filter path (fragment) > converts the child to a texture, mixes original + reflected samples, unpremultiplies > final-pass-fragment 1`] = `
"fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn unpremultiplyAlpha(color2: vec4f) -> vec4f {
  let alpha = color2.w;
  let straightRGB = select(vec3f(), (color2.xyz / alpha), (alpha > 1e-3f));
  return vec4f(straightRGB, alpha);
}

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

@group(2) @binding(0) var linearClamp: sampler;

fn edgeMirrorUV(uv: vec2f) -> vec2f {
  let mirrorX = (abs(uv.x) % 2f);
  let mirrorY = (abs(uv.y) % 2f);
  return vec2f(select(mirrorX, (2f - mirrorX), (mirrorX >= 1f)), select(mirrorY, (2f - mirrorY), (mirrorY >= 1f)));
}

fn mirrorReflect(center: vec2f, angle: f32, uv: vec2f, aspect: f32) -> vec3f {
  let aspectCorrectedUV = vec2f((uv.x * aspect), uv.y);
  let centerPos = vec2f((center.x * aspect), (1f - center.y));
  let delta = (aspectCorrectedUV - centerPos);
  let angleRad = (angle * 0.017453292519943295f);
  let lineDirection = vec2f(cos(angleRad), sin(angleRad));
  let lineNormal = vec2f((lineDirection.y * -1f), lineDirection.x);
  let signedDistance = dot(delta, lineNormal);
  let reflectedDelta = (delta - (lineNormal * (signedDistance * 2f)));
  let mirroredUV = (centerPos + reflectedDelta);
  let finalMirroredUV = vec2f((mirroredUV.x / aspect), mirroredUV.y);
  let shouldMirror = step(0f, signedDistance);
  return vec3f(finalMirroredUV.x, finalMirroredUV.y, shouldMirror);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  center: vec2f,
  angle: f32,
  edges: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  seed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_mr: padded_1,
  n_gen: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = blend_normal(vec4f(1.0, 1.0, 1.0, 0.0), unpremultiplyAlpha(textureSample(rtt_0, linearClamp, edgeMirrorUV(mix(uv, (mirrorReflect(uniforms.n_mr.center, uniforms.n_mr.angle, uv, uniforms._sys.aspect)).xy, (mirrorReflect(uniforms.n_mr.center, uniforms.n_mr.angle, uv, uniforms._sys.aspect)).z)))), uniforms.n_mr._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;
